# human_simulator

./: README.md
fake_people_detection/: CMakeLists.txt  package.xml
fake_people_detection/src/: node.cpp
human_model/: CMakeLists.txt  package.xml
human_model/config/: fake_detection.yaml  joint_names_umanoa.yaml  objects.yaml
human_model/launch/: display.launch  gazebo.launch  test.launch  upload.launch
human_model/meshes/: avambraccio_dx_rx_Link.STL  avambraccio_sx_rx_Link.STL  bacino_link.STL  bicipite_dx_rx_Link.STL  bicipite_sx_rx_Link.STL  busto_ry_Link.STL  coscia_dx_rz_Link.STL  coscia_sx_rz_Link.STL  mano_dx_rx_Link.STL  mano_dx_rz_Link.STL  mano_sx_Link.STL  piede_dx_ry_Link.STL  piede_sx_ry_Link.STL  polpaccio_dx_rx_Link.STL  polpaccio_sx_rx_Link.STL  testa_rx_Link.STL  testa_rz_Link.STL
human_model/urdf/: umanoa.csv  umanoa.urdf
